--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,12 @@
 page-home {
 
 }
+
+#emergencyBtn{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    display: block !important;
+    width:25%;
+    margin-bottom: 10%;
+}
