--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,9 +11,8 @@
             </ion-col>
             <ion-col padding-top col-8>
               <h2 ion-text class="no-margin bold text-white">
-                João Firmino
+                Aiham
               </h2>
-              <span ion-text color="light">Customer</span>
             </ion-col>
           </ion-row>
   
