--- a/src/pages/emergency/emergency.scss
+++ b/src/pages/emergency/emergency.scss
@@ -1,3 +1,12 @@
 page-emergency {
+    .emergencyIcons{
+        padding-right: 10%;
+    }
+    .rowInEmergency{
+       padding-top: 5% !important;
+    }
 
+    #emergencyBtns{
+        width : 100% ;
+    }
 }
