--- a/src/pages/emergency/emergency.scss
+++ b/src/pages/emergency/emergency.scss
@@ -6,6 +6,10 @@ page-emergency {
        padding-top: 5% !important;
     }
 
+    #emergency{
+        background: linear-gradient(to bottom,#f53d3d 0%,white 100%);
+    }
+
     #emergencyBtns{
         width : 100% ;
     }
