--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -320,11 +320,11 @@
         width: 86%;
   
         .logo {
-          width: 60px;
-          height: 60px;
+          width: 200px;
+          height: 200px;
           margin: 20px auto 0;
           border-radius: 10%;
-          background: url("../assets/img/ionic3-ico.png") no-repeat;
+          background: url("../assets/imgs/logo.png") no-repeat;
           background-size: 100%;
         }
   
