--- a/src/app/app.html
+++ b/src/app/app.html
@@ -36,7 +36,7 @@
       </ion-toolbar>
     </ion-header>
   
-    <ion-content color="primary">
+    <ion-content color="primary" class="linearbg">
   
       <ion-list class="user-list">
         <button ion-item menuClose class="text-1x" *ngFor="let menuItem of appMenuItems" (click)="openPage(menuItem)">
