--- a/src/pages/emergency/emergency.scss
+++ b/src/pages/emergency/emergency.scss
@@ -7,7 +7,7 @@ page-emergency {
     }
 
     #emergency{
-        background: linear-gradient(to bottom,#f53d3d 0%,white 100%);
+        background: linear-gradient(to bottom,white 0%,#f53d3d 100%);
     }
 
     #emergencyBtns{
