--- a/src/pages/place/place.scss
+++ b/src/pages/place/place.scss
@@ -2,4 +2,7 @@ page-place {
     agm-map{
         height:250px;
     }
+    #linear-bg{
+        background: linear-gradient(to bottom,white 0%,#488aff 100%);
+    }
 }
