--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,25 +4,14 @@
   
         <ion-grid>
           <ion-row>
-            <ion-col col-4>
-                <div class="user-avatar">
-                  <img src="">
-                </div>
-            </ion-col>
             <ion-col padding-top col-8>
               <h2 ion-text class="no-margin bold text-white">
-                Aiham
+               Hey, {{name}}
               </h2>
             </ion-col>
           </ion-row>
   
           <ion-row no-padding class="other-data">
-            <ion-col no-padding class="column">
-              <button ion-button icon-left small full color="light" menuClose disabled>
-                <ion-icon name="contact"></ion-icon>
-                Edit Profile
-              </button>
-            </ion-col>
             <ion-col *ngIf="isAuthenticated" no-padding class="column">
               <button ion-button icon-left small full color="light" menuClose (click)="logout()">
                 <ion-icon name="log-out"></ion-icon>
@@ -34,6 +23,14 @@
         </ion-grid>
   
       </ion-toolbar>
+      <ion-row no-padding class="other-data">
+        <ion-col *ngIf="isAuthenticated" no-padding class="column">
+          <button ion-button icon-left small full color="light" menuClose (click)="myPlaces()">
+            <ion-icon name="photos"></ion-icon>
+            My places
+          </button>
+        </ion-col>
+      </ion-row>
     </ion-header>
   
     <ion-content color="primary" class="linearbg">
