--- a/src/pages/search-next-to-you/search-next-to-you.scss
+++ b/src/pages/search-next-to-you/search-next-to-you.scss
@@ -2,4 +2,7 @@ page-search-next-to-you {
         #linear-bg{
             background: linear-gradient(to bottom,white 0%,#488aff 100%);
         }
+        agm-map {
+            height: 250px;
+          }
 }
