--- a/src/pages/map-to-search/map-to-search.scss
+++ b/src/pages/map-to-search/map-to-search.scss
@@ -2,7 +2,12 @@ page-map-to-search {
     #linear-bg{
         background: linear-gradient(to bottom,white 0%,#488aff 100%);
     }
-    agm-map {
-        height: 250px;
-      }
+    .scroll {
+        height: 100%
+    }
+
+    #map {
+        width: 100%;
+        height: 100%;
+    }
 }
