--- a/src/pages/search-next-to-you/search-next-to-you.scss
+++ b/src/pages/search-next-to-you/search-next-to-you.scss
@@ -5,4 +5,9 @@ page-search-next-to-you {
         agm-map {
             height: 250px;
           }
+          ion-icon{
+              
+              margin-bottom: 5px;
+              margin-right:10px;
+          }
 }
